<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">内蒙古农气掌上通</string>
    <string name="action_settings">设置</string>
    <string name="no_data">--/--</string>
    <string name="send_comment">发送</string>
    <string name="exit_wait">再按一次退出程序</string>
    <string name="no_desc"></string>
    <string name="title">标题</string>
    <string name="net_errer">对不起,请检查网络连接!</string>
    <string name="reset_success">撤销完成</string>
    <string name="no_data_load">对不起,没有找到相关数据，请检查网络!</string>
    <string name="weather">天气</string>
    <string name="farm_name_empty">农田名称不允许为空!</string>
    <string name="farm_name_no_rows">农田名称不能换行!</string>
    <string name="weather_title">最近天气情况</string>
    <string name="farm_no">对不起，你还没有添加农田!</string>
    <string name="no_city">请至少选择一个区县城市！</string>
    <string name="farm_detail_title">农田详细情况</string>
    <string name="farm_one_name">农田名称</string>
    <string name="weather_city">点击添加地区</string>
    <string name="enter_comment">来评论几句吧!</string>
    <string name="product">资讯</string>
    <string name="phonenum">请输入注册的手机号</string>
    <string name="sendverification">发送验证码</string>
    <string name="verificationcode">请输入收到的验证码</string>
    <string name="product_title">产品资讯</string>
    <string name="farm_title">农田详情</string>
    <string name="product_detail">产品资讯详情</string>
    <string name="product_expert_detail">专家产品详情</string>
    <string name="weather_warning">最新预警信号</string>
    <string name="weather_warning_detail">警告详情</string>
    <string name="crop_detail">农情详情</string>
    <string name="advisory_ask">我要提问</string>
    <string name="advisory_question_list">最新咨询信息</string>
    <string name="weather_city_add">地区管理</string>
    <string name="msg_center">消息中心</string>
    <string name="my">我的</string>
    <string name="adv_detail">咨询详细</string>
    <string name="weather_city_set">添加地区</string>
    <string name="weather_city_serch">搜索地区</string>
    <string name="crop_des">请添加农作物描述</string>
    <string name="crop_upload">农情上报</string>
    <string name="farmland_create">快速添加田块</string>
    <string name="weather_hot_city">热门地区</string>
    <string name="situation">农情</string>
    <string name="edit_pwd">修改密码</string>
    <string name="situation_title">最新农情</string>
    <string name="advisory">咨询</string>
    <string name="advisory_title">咨询</string>
    <string name="science_title">最新农气科普</string>
    <string name="please_select_farm">请选择农田!</string>
    <string name="please_add_select_farm">请添加或选择农田!</string>
    <string name="more">农业天气通</string>
    <string name="crop_commis">作物定制</string>
    <string name="area_commis">区域定制</string>
    <string name="use_commission">用户定制</string>
    <string name="about">关于</string>
    <string name="selectworkstation">选择基地</string>
    <string name="more_comment">更多评论</string>
    <string name="comment">评论</string>
    <string name="no_product">对不起，没有你要查找的产品信息.</string>
    <string name="message_center">消息中心</string>
    <string name="science">农气科普</string>
    <string name="farm_manager">农田管理</string>
    <string name="professional_advice">专家建议</string>
    <string name="material_monitor">物联监控</string>
    <string name="use_guide">使用指南</string>
    <string name="check_update">检查更新</string>
    <string name="feedback">意见反馈</string>
    <string name="loading_data">正在加载数据，请稍后</string>
    <string name="locating_area_data">正在定位地区，请稍后</string>
    <string name="upload_crop_data">正在上传农情信息，请稍后</string>
    <string name="upload_adv_data">正在上传咨询信息，请稍后</string>
    <string name="professional_name">专业服务</string>
    <string name="policy_name">公共服务</string>
    <string name="hot_advisory">热门</string>
    <string name="new_advisory">最新</string>
    <string name="my_advisory">我的农情</string>
    <string name="praise_success">点赞成功</string>
    <string name="praise_invalid">您已赞过此产品，不能再点赞了!</string>
    <string name="praise_fail">赞失败!</string>
    <string name="comment_success">发表评论成功</string>
    <string name="no_comment">评论内容不能为空</string>
    <string name="no_comment_show">还没有相关评论内容!</string>
    <string name="farm_feed_info">种养信息</string>
    <string name="farm_fundation_info">基本信息</string>
    <string name="farm_feed_plan">种养计划</string>
    <string name="farm_lng">经度</string>
    <string name="farm_lat">纬度</string>
    <string name="farm_height">高度</string>
    <string name="farm_region">地区</string>
    <string name="farm_region_code">地块编号</string>
    <string name="farm_workstation_apply">申请加入基地</string>
    <string name="farm_area">面积(平米)</string>
    <string name="my_farm">我的农田</string>
    <string name="farm_new">提交</string>
    <string name="login">登录</string>
    <string name="reg">注册</string>
    <string name="edit">编辑</string>
    <string name="appley_vip">申请成为VIP用户</string>
    <string name="logout">注销</string>
    <string name="save">保存</string>
    <string name="cropstype">种养类型</string>
    <string name="cropsvariety">农产品种</string>
    <string name="agrperiod">生长发育期</string>
    <string name="enter_longitude">请输入经度!</string>
    <string name="enter_latitude">请输入纬度!</string>
    <string name="enter_areacode">请选择地区!</string>
    <string name="enter_area">请输入面积!</string>
    <string name="city_add_remind">长按城市，可拖动改变城市顺序</string>
    <string name="loading_farm_data">正在加载农田，请稍后</string>
    <string name="loading_farmdetail_data">正在加载农田详情，请稍后</string>
    <string name="update_farm_lng_sucess">更新农田经纬度成功</string>
    <string name="update_farm_lng_bad">更新农田经纬度失败</string>
    <string name="update_farm_scrop_sucess">更新农田信息成功</string>
    <string name="update_farm_scrop_bad">更新农田信息失败</string>
    <string name="insert_farm_scrop_sucess">添加农田信息成功</string>
    <string name="insert_farm_scrop_bad">添加农田信息失败</string>
    <string name="new_user_reg">新用户注册</string>
    <string name="user_showname">用户姓名:</string>
    <string name="user_no_showname">用户名不能为空!</string>
    <string name="user_reg_pleaseselectcity">请先选择区域!</string>
    <string name="user_loginname">账   号:</string>
    <string name="user_no_loginname">手机号不能为空!</string>
    <string name="user_no_someinformation">注册信息不能为空!</string>
    <string name="user_pwd">密   码:</string>
    <string name="user_no_pwd">密码不能为空!</string>
    <string name="user_no_pwd_length">密码的长度不能小于6位!</string>
    <string name="user_old_error_pwd">原密码错误!</string>
    <string name="user_new_equal_re_pwd">新密码不能为空!</string>
    <string name="user_new_no_pwd_length">新密码的长度不能小于6位!</string>
    <string name="invalid_login">账号或密码有误!</string>
    <string name="user_re_pwd">确认密码:</string>
    <string name="edit_header">点击左侧图片可编辑头像</string>
    <string name="user_equal_re_pwd">两次输入密码不一致!</string>
    <string name="user_no_valid">请输入验证码!</string>
    <string name="user_err_valid">验证码输入错误，请重新输入!</string>
    <string name="user_tel">手机号码:</string>
    <string name="user_no_tel">请输入正确的手机号!</string>
    <string name="about_area">关注区域：</string>
    <string name="about_province">点击选择乡镇（可多选）</string>
    <string name="about_country">选择的乡镇如下：</string>
    <string name="already_about_country">你所关注的乡镇如下：</string>
    <string name="select_country"></string>
    <string name="user_login">登录</string>
    <string name="user_valid">验证码：</string>
    <string name="refresh">刷新</string>
    <string name="remember_pwd">记住密码</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="reg_new_user">注册新用户</string>
    <string name="mod_user">用户编辑</string>
    <string name="user_detail">用户详情</string>
    <string name="apply_vip">申请为VIP用户</string>
    <string name="response_no">对不起，未获取数据，请检查网络.</string>
    <string name="response_no_crop_info">对不起，未获取数据</string>
    <string name="reg_success">注册成功!</string>
    <string name="reg_failture">注册失败!</string>
    <string name="edit_success">修改用户信息成功!</string>
    <string name="edit_failture">修改用户信息失败!</string>
    <string name="edit_pwd_success">修改密码成功!</string>
    <string name="edit_pwd_failture">修改密码失败!</string>
    <string name="user_reg_loginname">注册时账号：</string>
    <string name="user_reg_tel">注册时手机号：</string>
    <string name="find_password">找回密码</string>
    <string name="find_now">立即找回</string>
    <string name="user_exists">账号已存在，请重新输入.</string>
    <string name="find_password_msg">短信已发送,请稍后查收新密码短信.</string>
    <string name="feed_send">提交</string>
    <string name="feed_success">反馈提交成功</string>
    <string name="feed_fail">反馈提交失败</string>
    <string name="suggest_type">提议类别</string>
    <string name="crop_type">农作物类别</string>
    <string name="crop_grow_type">生长发育期</string>
    <string name="suggest_area">针对区域</string>
    <string name="suggest_height">选择海拔</string>
    <string name="suggest_tip">请输入提议内容，不超过140个字。</string>
    <string name="crop_tip">请添加农作物描述。</string>
    <string name="farmland_tip">请添加农田描述。</string>
    <string name="suggest_send_success">提交建议成功</string>
    <string name="suggest_send_fail">提交建议失败</string>
    <string name="suggest_info">建议内容</string>
    <string name="suggest_please_type">请选择建议类型</string>
    <string name="suggest_crop_please_type">请选择农作物类型</string>
    <string name="suggest_crop_grow_please_type">请选择农作物生长期</string>
    <string name="suggest_please_area">请选择区域</string>
    <string name="suggest_please_title">请输入建议标题</string>
    <string name="suggest_please_info">请输入建议内容</string>
    <string name="suggest_please_height">请选择海拔</string>
    <string name="adv_please_info">请输入咨询内容,建议不超过140个字.</string>
    <string name="adv_please_serch_info">请输入搜索内容 如：“水稻”</string>
    <string name="map_point_info">地图选点</string>
    <string name="one_map_info">农气一张图</string>
    <string name="one_map_offline">下载离线地图</string>
    <string name="one_map_dialog_titile">图层选择</string>
    <string name="apk_xml_url">http://183.230.183.18:8088/pisa/app/PisaClientInfo.xml</string>

    <!-- 下拉刷新字符串 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="title_activity_aboutapp">AboutappActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_commission">CommissionActivity</string>
    <string name="title_activity_detailedcrop">DetailedcropActivity</string>
    <string name="title_activity_detailedarea">DetailedareaActivity</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="title_activity_my_farm">MyFarmActivity</string>
    <string name="title_activity_myadvisory">MyadvisoryActivity</string>
    <string name="title_activity_product">服务产品</string>

</resources>