<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/ll_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/edit_circle_border"
        android:padding="2dp" >

        <TextView
            android:layout_width="@dimen/text_width_default"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:text="@string/suggest_type"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingBottom="3dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="3dp"
            android:text="@string/suggest_please_type"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_crop_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/edit_circle_border"
        android:padding="2dp" >

        <TextView
            android:layout_width="@dimen/text_width_default"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:text="@string/crop_type"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_crop_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingBottom="3dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="3dp"
            android:text="@string/suggest_crop_please_type"
            android:textColor="@color/black" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/ll_crop_grow_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/edit_circle_border"
        android:padding="2dp" >

        <TextView
            android:layout_width="@dimen/text_width_default"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:text="@string/crop_grow_type"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_crop_grow_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingBottom="3dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="3dp"
            android:text="@string/suggest_crop_grow_please_type"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_area"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/edit_circle_border"
        android:padding="2dp" >

        <TextView
            android:layout_width="@dimen/text_width_default"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:text="@string/suggest_area"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_area"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingBottom="3dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="3dp"
            android:text="@string/suggest_please_area"
            android:textColor="@color/black" />
    </LinearLayout>
    
    
     <TextView
         	android:id="@+id/tv_please_know"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:text="请选择专家知识："
            android:visibility="invisible"
            android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/edit_circle_border"
        android:padding="2dp" >
        <ListView 
            android:id="@+id/lv_crop_factor"
            android:layout_width="fill_parent"
            android:divider="@color/division_line"  
            android:dividerHeight="1dp"
        	android:layout_height="wrap_content"
        	android:cacheColorHint="#00000000"
            ></ListView>
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/edit_circle_border"
        android:padding="2dp" >

        <TextView
            android:layout_width="@dimen/text_width_default"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:text="@string/title"
            android:textColor="@color/black" />

        <com.supermap.pisaclient.common.views.LineEditText
            android:id="@+id/et_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:inputType="text"
            android:padding="3dp"
            android:textColor="@color/black" />
    </LinearLayout>

    <TextView
        android:layout_width="@dimen/text_width_default"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/suggest_info"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/et_info"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:singleLine="false"
        android:scrollHorizontally="false"
        android:hint="@string/suggest_tip"
        android:textSize="@dimen/font_size_default"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/btn_common_edit_style"
        android:text="@string/feed_send"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_default" >
        </Button>

</LinearLayout>