<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >

     <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@color/country_color"
            android:orientation="horizontal" >
            
     <ImageButton
            android:id="@+id/ibtn_back"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:src="@drawable/back_5"
            android:background="@drawable/menu_button_selector"
            android:contentDescription="@string/no_desc" />    
    
    <TextView
            android:layout_width="0dp"
        	android:layout_height="50dp"
        	android:layout_weight="4"
        	android:gravity="center"
        	android:textSize="18sp"
        	android:text="@string/find_password"
       		android:textColor="@color/white" />
    
    <ImageButton
            android:id="@+id/ibtn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/menu_button_selector"
            android:visibility="invisible" /> 
            </LinearLayout>
    

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/edit_circle_border"
            android:padding="2dp" >

            <com.supermap.pisaclient.common.views.LineEditText
                android:id="@+id/et_loginname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_gravity="center"
                android:background="@null"
                android:hint="@string/phonenum"
                android:inputType="text"
                android:padding="3dp"
                android:textColor="@color/black" />
                </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/edit_circle_border"
            android:orientation="horizontal"
            android:padding="2dp" >

            <com.supermap.pisaclient.common.views.LineEditText
                android:id="@+id/et_verification"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                android:background="@null"
                android:hint="@string/verificationcode"
                android:inputType="text"
                android:padding="3dp"
                android:textColor="@color/black" />
            
            <Button
            	android:id="@+id/sendverification"
            	android:layout_width="fill_parent"
            	android:layout_height="45dp"
            	android:padding="15dp"
            	android:layout_marginLeft="10dp"
            	android:background="@drawable/btn_circle_border"
            	android:textSize="14sp"
            	android:layout_gravity="center"
            	android:singleLine="true"
            	android:textColor="@color/white"
            	android:text="@string/sendverification" >
            	</Button>
                </LinearLayout>

        <Button
            android:id="@+id/btn_find"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/btn_circle_border"
            android:padding="5dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/find_now" >
            </Button>
    </LinearLayout>

</LinearLayout>