<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/farm_menu_color"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="35.0dip" >

            <TextView
                android:id="@+id/text1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/farm_fundation_info"
                android:textColor="@color/menu_title_selected"
                android:textSize="@dimen/font_size_default" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/farm_feed_info"
                android:textColor="@color/menu_title"
                android:textSize="@dimen/font_size_default" />
        </LinearLayout>

        <ImageView
            android:id="@+id/cursor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/no_desc"
            android:scaleType="matrix"
            android:src="@drawable/menu_line" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/farm_menu_line_color" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vPager"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:background="@color/product_background_color"
        android:flipInterval="30"
        android:padding="15dp"
        android:persistentDrawingCache="animation" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/product_background_color"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/btn_common_edit_style"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/edit"
       		android:textColor="@color/white"
            android:textSize="@dimen/font_size_default" >
        </Button>
    </LinearLayout>

</LinearLayout>