<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_no_data"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data_load" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_no1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/first_product_border"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/iv_no1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/no_desc"
            android:maxHeight="100dp"
            android:visibility="gone"
             />

        <TextView
            android:id="@+id/tv_no1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_default"
            android:visibility="gone"
            android:textStyle="bold" >
        </TextView>
    </LinearLayout>

    <ListView
        android:id="@+id/lvProfProducts"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:cacheColorHint="#00000000"
        android:divider="#00ffffff"
        android:scrollbars="none" >
    </ListView>

    <TextView
        android:id="@+id/tv_no_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_product"
        android:visibility="gone" />

</LinearLayout>